# Hrnzipper

./: INSTALLER_GUIDE.md  LICENSE.txt  README.md  WINDOWS_DEPLOYMENT.md  build_windows.py  create_msi_installer.py  desktop_archiver.spec  main.py  pyproject.toml  replit.md  simple_build.py  test_hrnzipper.py  version_info.txt
